objects/LeadStaging__c.object
<CustomObject>
    <description>Staging table for Leads deposited by outside sources to Office Depot</description>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Permission__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Time__c</fullName>
        <label>Contact Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Timeframe__c</fullName>
        <description>This field indicates when the customer would like to be contacted.</description>
        <label>Contact Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Soon As Possible (24-48hrs)</fullName>
                </value>
                <value>
                    <fullName>Within 1-2 weeks</fullName>
                </value>
                <value>
                    <fullName>Within 2-4 weeks</fullName>
                </value>
                <value>
                    <fullName>Within 1-2 Months</fullName>
                </value>
                <value>
                    <fullName>2+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LeadStagings</relationshipLabel>
        <relationshipName>LeadStagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Location__c</fullName>
        <label>Employee Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalRefID__c</fullName>
        <label>ExternalRefID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used to indicate whether or not the potential customer wishes to receive marketing documentation.</description>
        <label>Marketing Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusMessage__c</fullName>
        <label>StatusMessage</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Reference__c</fullName>
        <label>URL Reference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>LeadStaging</label>
    <listViews>
        <fullName>BizBox_Lead_Triage_LeadStaging</fullName>
        <filterScope>Queue</filterScope>
        <label>BizBox Lead Triage</label>
        <queue>BizBox_Lead_Triage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Staging</fullName>
        <columns>Status__c</columns>
        <columns>StatusMessage__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Address1__c</columns>
        <columns>Address2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Product__c</columns>
        <columns>URL_Reference__c</columns>
        <columns>Store_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lead Staging All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Staging_Errors</fullName>
        <booleanFilter>(1 or 2)</booleanFilter>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Address1__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Phone__c</columns>
        <columns>Source__c</columns>
        <columns>Product__c</columns>
        <columns>StatusMessage__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StatusMessage__c</field>
            <operation>contains</operation>
            <value>Invalid</value>
        </filters>
        <filters>
            <field>StatusMessage__c</field>
            <operation>contains</operation>
            <value>null</value>
        </filters>
        <label>Lead Staging Errors</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>LeadStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadStagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>